syntax = "proto3";

package proto;

service PubBroker {
	rpc Publish(stream Publication) returns (stream PubResponse) {}
}

service SubBroker {
	rpc Subscribe(stream SubRequest) returns (stream Publication) {}
}

message Publication {
	int32 PubType = 1;
	int64 PublisherID = 2;
	int64 PublicationID = 3;
	int64 Topic = 4;
	int64 BrokerID = 5;
	bytes Content = 6;
	repeated bytes MACs = 7;
}

message PubResponse{
	string Message = 1;
}

message SubRequest {
	int64 SubscriberID = 1;
	repeated int64 Topics = 2;
}
